# ARCHiVE

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.sh
archive/: Cargo.toml  README.md
archive-core/: Cargo.toml
archive-core/src/: carve.rs  keychain.rs  lib.rs
archive/src/: accounts.rs  app_databases.rs  app_files.rs  attachments.rs  audio.rs  backup_diff.rs  bluetooth.rs  calendar.rs  calls.rs  certificates.rs  contacts.rs  cross_version_tests.rs  data_usage.rs  datetime.rs  db_export.rs  device_backup.rs  device_model.rs  device_usage.rs  enrich.rs  format.rs  health.rs  homescreen.rs  interactions.rs  keyboard_lexicon.rs  known_networks.rs  mail.rs  main.rs  messages.rs  notes.rs  package.rs  pdf.rs  photos.rs  photos_deleted.rs  recover.rs  recover_deleted.rs  redact.rs  reminders.rs  safari.rs  schema_check.rs  search.rs  (+10 more)
archive/templates/: accounts.html  app-databases.html  app-files.html  apps.html  attachments.html  backup-diff.html  bluetooth-devices.html  calendar.html  calls.html  certificates.html  contacts.html  data-usage.html  deleted.html  device-usage.html  health.html  homescreen.html  interactions.html  keyboard-lexicon.html  keychain-inventory.html  known-networks.html  mail.html  notes.html  passwords.html  photos-recently-deleted.html  photos-summary.html  photos.html  recover-index.html  recover-summary.html  reminders.html  safari-bookmarks.html  safari-history.html  schema-check.html  search.html  significant-locations.html  stats.html  timeline.html  voice-memos.html  voicemail.html  vpn-creds.html  whatsapp.html  (+1 more)
backup-extractor/: Cargo.toml  README.md
backup-extractor/src/: contacts.rs  datetime.rs  format.rs  main.rs  test_fixtures.rs  voicemail.rs
backup-extractor/templates/: contacts.html
imessage-database/: Cargo.toml  README.md  build.rs
imessage-database/src/error/: attachment.rs  digital_touch.rs  handwriting.rs  message.rs  mod.rs  plist.rs  query_context.rs  streamtyped.rs  table.rs  typedstream.rs
imessage-database/src/message_types/: app.rs  app_store.rs  business.rs  collaboration.rs  edited.rs  expressives.rs  mod.rs  music.rs  placemark.rs  polls.rs  sticker.rs  translation.rs  url.rs  variants.rs
imessage-database/src/message_types/business_chat/: business.rs  form.rs  list_picker.rs  mod.rs  quick_reply.rs
imessage-database/src/message_types/digital_touch/: digital_touch.proto  digital_touch_proto.rs  fireball.rs  heartbeat.rs  kiss.rs  media.rs  mod.rs  models.rs  sketch.rs  svg.rs  tap.rs
imessage-database/src/message_types/handwriting/: models.rs
imessage-database/src/message_types/text_effects/: address.rs  animation.rs  mod.rs  style.rs  text_effect.rs  unit.rs
imessage-database/src/message_types/text_effects/detected/: address.rs  currency.rs  flight.rs  mod.rs  shipment_tracking.rs  unit.rs
imessage-database/src/tables/: attachment.rs  chat.rs  chat_handle.rs  diagnostic.rs  handle.rs  mod.rs  table.rs
imessage-database/src/tables/messages/: body.rs  message.rs  mod.rs  models.rs  query_parts.rs
imessage-database/src/tables/messages/tests/: announcement.rs  date_tests.rs  query_tests.rs  variant.rs
imessage-database/src/util/: bundle_id.rs  data_detected.rs  dates.rs  dirs.rs  mod.rs  platform.rs  plist.rs  query_context.rs  size.rs  streamtyped.rs  typedstream.rs  union_find.rs
imessage-database/test_data/address_properties/: FullAddressWithCountry.plist
imessage-database/test_data/app_message/: BusinessFormRequest.plist  BusinessFormResponse.plist  BusinessListPicker.plist  BusinessListPickerResponse.plist  BusinessQuickReply.plist  BusinessQuickReplyResponse.plist  PollCreate.plist  PollRemovedVote.plist  PollVote.plist  PollVote2.plist  TranslatedWithInlineStickersAndEmojiSummaryInfo.plist  Translation.plist  TranslationReceived.plist
imessage-database/test_data/chat_properties/: after_background_preset.plist  after_background_removed.plist  before_background.plist
imessage-database/test_data/db/: test.db
imessage-database/test_data/edited_message/: MemojiEdited.plist
imessage-database/test_data/flight_properties/: FlightCode.plist  FlightNamedAirline.plist
imessage-database/test_data/tracking_properties/: TrackingUps.plist
imessage-database/test_data/typedstream/: Address  AllUnits  AnimatedStickerOnly  Currency  CurrencyMoneyAmount  CurrencyTemperatureVolumeWeight  Flight  FormattedInlineStickers  MemojiOnly  MemojiWithText  MultipleTypesInline  StaticAnimojiRegularEmoji  Tracking  TranslatedWithInlineStickersAndEmoji
imessage-database/test_data/unit_properties/: HttpURL.plist  Temperature.plist  Volume.plist  Weight.plist
imessage-exporter/: Cargo.toml  README.md  askama.toml  build.rs
imessage-exporter/native/webkit2pdf/: main.swift
imessage-exporter/src/: main.rs
imessage-exporter/src/app/: contacts.rs  data_source.rs  error.rs  escaping.rs  export_type.rs  mod.rs  options.rs  progress.rs  runtime.rs  sanitizers.rs  test_dir.rs
imessage-exporter/src/app/compatibility/: attachment_manager.rs  backup.rs  error.rs  mod.rs  models.rs
imessage-exporter/src/app/compatibility/attachment_manager/: manager.rs  mod.rs  mode.rs  plan.rs  target.rs
imessage-exporter/src/app/compatibility/converters/: mod.rs  (+5 more)
imessage-exporter/src/exporters/: exporter.rs  formatter.rs  html.rs  mod.rs  shared.rs  txt.rs
imessage-exporter/src/exporters/html/: balloons.rs  escaper.rs  jumbomoji.rs  mod.rs  safe.rs  text_effects.rs  view_model.rs
imessage-exporter/src/exporters/pdf/: merge.rs  mod.rs  recompress.rs  webkit.rs
imessage-exporter/src/exporters/resources/: style.css
imessage-exporter/src/exporters/shared/: announcement.rs  attachment.rs  balloon.rs  driver.rs  edited.rs  format.rs  message.rs  mod.rs  part.rs  render.rs  reply.rs  tapback.rs  text.rs  time.rs
imessage-exporter/src/exporters/txt/: balloons.rs  mod.rs  view_model.rs
(+100 files in other folders)
