[package]
name = "archive-core"
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
crabapple = "=0.4.7"
tempfile = "=3.27.0"
serde = { version = "=1.0.228", features = ["derive"] }

[dev-dependencies]
rusqlite = { version = "=0.40.0", features = ["bundled"] }
serde_json = "=1.0.145"
