[package]
name = "archive"
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
archive-core = { path = "../archive-core" }
chrono = "=0.4.44"
clap = { version = "=4.6.1", features = ["cargo", "derive"] }
rusqlite = { version = "=0.40.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
csv = "=1.3.1"
askama = "=0.16.0"
tempfile = "=3.27.0"
flate2 = "=1.1.9"
plist = "=1.9.0"
# Standard WinZip AES-256 encrypted .zip for the `package` command (deflate +
# aes-crypto only; default features trimmed to keep the dependency tree lean).
zip = { version = "=2.4.2", default-features = false, features = ["deflate", "aes-crypto"] }
