[package]
name = "backup-extractor"
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
backup-core = { path = "../backup-core" }
chrono = "=0.4.44"
clap = { version = "=4.6.1", features = ["cargo", "derive"] }
rusqlite = { version = "=0.40.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
csv = "=1.3.1"
askama = "=0.16.0"
tempfile = "=3.27.0"
