[package]
authors = ["Christopher Sardegna <imessage@reagentx.net>"]
categories = ["database"]
description = "Parsers and tools to interact with iMessage SQLite data"
edition = "2024"
exclude = [".github", "docs", "build.sh"]
license = "GPL-3.0-or-later"
name = "imessage-database"
repository = "https://github.com/ReagentX/imessage-exporter"
version = "0.0.0"

[dependencies]
chrono = "=0.4.42"
plist = "=1.8.0"
rusqlite = { version = "=0.37.0", features = ["blob", "bundled"] }
sha1 = "=0.10.6"
protobuf = "=3.7.2"
lzma-rs = "=0.3.0"
crabstep = "=0.3.2"
base64 = "0.22.1"
jzon = "0.12.5"

[build-dependencies]
protobuf = "=3.7.2"
protobuf-codegen = "=3.7.2"
