[package]
authors = ["Christopher Sardegna <imessage@reagentx.net>"]
categories = ["database"]
description = "Parsers and tools to interact with iMessage SQLite data"
edition = "2024"
exclude = [".github", "docs", "build.sh"]
license = "GPL-3.0-or-later"
name = "imessage-database"
repository = "https://github.com/ReagentX/imessage-exporter"
version = "0.0.0"

[dependencies]
chrono = "=0.4.44"
plist = "=1.9.0"
rusqlite = { version = "=0.40.0", features = ["blob", "bundled"] }
sha1 = "=0.11.0"
protobuf = "=3.7.2"
lzma-rs = "=0.3.0"
crabstep = { version = "=0.5.0", features = ["foundation"] }
base64 = "=0.22.1"
jzon = "=0.12.5"

[features]
proto-regen = ["dep:protobuf-codegen"]

[build-dependencies]
protobuf-codegen = { version = "=3.7.2", optional = true }
